# C827-rechnerarchitektur

./: .gitmodules  CMakeLists.txt  README.MD  build.sh  build_remote.sh  driver.c  driver_multiple.c  fib1.c  fib2.c  fib3.c  fib3_debug.perf_stat  fib3_debug_1000.perf_stat  fib3_release.perf_stat  fib3_release_1000.perf_stat  fib_iterative_cache.c  fib_rec_cache.c  fib_unroll.c  grep_commands.sh  object_sizes.sh  perf.sh  perf_times.sh
src/: driver.c  driver_integer.c  fib_integer.c  fib_iterative.c  fib_rec.c  fib_tailrec.c  integer.c  integer.h
